fix button alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -25,13 +25,11 @@ body {
   display: inline-block;
   vertical-align: middle;
   font-family: 'Josefin Sans', sans-serif;
-  text-align: center;
 }
 
 .main--content {
   width: 80%;
   display: inline-block;
-  text-align: center;
   padding: 1em;
 }
 
@@ -103,20 +101,12 @@ a.selected:hover {
   position: relative;
 }
 
-.link-bar li:first-child {
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
-}
-
-.link-bar li:last-child {
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
-}
-
 .link-bar--text {
   position: absolute;
-  left: 50%;
-  transform: translate(-50%, 50%);
+  top: 25%;
+  bottom: 0;
+  left: 0;
+  right: 0;
   visibility: hidden;
 }
 
@@ -145,14 +135,23 @@ nav {
 
 nav li {
   display: inline-block;
-  text-align: center;
   width: 25%;
   position: relative;
 }
 
+.rounded-bar li:first-child {
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+.rounded-bar li:last-child {
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
 
 h1 {
   font-size: 2em;
+  margin: 1em 0;
 }
 
 .paragraph {
@@ -168,4 +167,9 @@ h1 {
   padding-right: 1em;
   padding-bottom: 2em;
   text-align: center;
+}
+
+img {
+  display: block;
+  margin: 0 auto;
 }
